--- a/Code/Classification/XGBoost/fit_XGBoost_All_features_PCA.ipynb
+++ b/Code/Classification/XGBoost/fit_XGBoost_All_features_PCA.ipynb
@@ -6,10 +6,10 @@
    "id": "a82021c3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-07T22:20:24.046349Z",
-     "iopub.status.busy": "2024-04-07T22:20:24.046076Z",
-     "iopub.status.idle": "2024-04-07T22:20:25.302905Z",
-     "shell.execute_reply": "2024-04-07T22:20:25.302413Z"
+     "iopub.execute_input": "2024-04-14T17:59:37.608392Z",
+     "iopub.status.busy": "2024-04-14T17:59:37.607554Z",
+     "iopub.status.idle": "2024-04-14T17:59:39.241649Z",
+     "shell.execute_reply": "2024-04-14T17:59:39.240694Z"
     }
    },
    "outputs": [],
@@ -23,10 +23,10 @@
    "id": "9200b5b1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-07T22:20:25.305413Z",
-     "iopub.status.busy": "2024-04-07T22:20:25.305140Z",
-     "iopub.status.idle": "2024-04-07T22:20:25.307602Z",
-     "shell.execute_reply": "2024-04-07T22:20:25.307238Z"
+     "iopub.execute_input": "2024-04-14T17:59:39.246798Z",
+     "iopub.status.busy": "2024-04-14T17:59:39.246358Z",
+     "iopub.status.idle": "2024-04-14T17:59:39.250449Z",
+     "shell.execute_reply": "2024-04-14T17:59:39.249691Z"
     }
    },
    "outputs": [],
@@ -41,10 +41,10 @@
    "id": "52a2e97c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-07T22:20:25.309428Z",
-     "iopub.status.busy": "2024-04-07T22:20:25.309163Z",
-     "iopub.status.idle": "2024-04-07T22:20:25.311190Z",
-     "shell.execute_reply": "2024-04-07T22:20:25.310833Z"
+     "iopub.execute_input": "2024-04-14T17:59:39.254417Z",
+     "iopub.status.busy": "2024-04-14T17:59:39.254072Z",
+     "iopub.status.idle": "2024-04-14T17:59:39.257973Z",
+     "shell.execute_reply": "2024-04-14T17:59:39.257181Z"
     }
    },
    "outputs": [],
@@ -59,10 +59,10 @@
    "id": "878e4208",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-07T22:20:25.313034Z",
-     "iopub.status.busy": "2024-04-07T22:20:25.312645Z",
-     "iopub.status.idle": "2024-04-07T22:20:27.725142Z",
-     "shell.execute_reply": "2024-04-07T22:20:27.724711Z"
+     "iopub.execute_input": "2024-04-14T17:59:39.261860Z",
+     "iopub.status.busy": "2024-04-14T17:59:39.261603Z",
+     "iopub.status.idle": "2024-04-14T17:59:42.321819Z",
+     "shell.execute_reply": "2024-04-14T17:59:42.320580Z"
     }
    },
    "outputs": [
@@ -71,109 +71,109 @@
      "output_type": "stream",
      "text": [
       "all training data\n",
-      "           Class                            harmonized_filename  \\\n",
-      "0            SUV          SUV_train_orig_test_07234_resized.jpg   \n",
-      "1            SUV         SUV_train_orig_train_03426_resized.jpg   \n",
-      "2          Sedan       Sedan_train_orig_train_00433_resized.jpg   \n",
-      "3            SUV         SUV_train_orig_train_03381_resized.jpg   \n",
-      "4          Sedan        Sedan_train_orig_test_07466_resized.jpg   \n",
-      "..           ...                                            ...   \n",
-      "370  Convertible  Convertible_train_orig_test_07372_resized.jpg   \n",
-      "371          SUV         SUV_train_orig_train_07504_resized.jpg   \n",
-      "372          SUV         SUV_train_orig_train_05279_resized.jpg   \n",
-      "373       Pickup       Pickup_train_orig_test_04234_resized.jpg   \n",
-      "374  Convertible  Convertible_train_orig_test_04220_resized.jpg   \n",
+      "           Class                             harmonized_filename  \\\n",
+      "0          Sedan         Sedan_train_orig_test_03563_resized.jpg   \n",
+      "1            SUV           SUV_train_orig_test_00825_resized.jpg   \n",
+      "2    Convertible  Convertible_train_orig_train_00932_resized.jpg   \n",
+      "3          Sedan        Sedan_train_orig_train_06768_resized.jpg   \n",
+      "4          Sedan         Sedan_train_orig_test_02848_resized.jpg   \n",
+      "..           ...                                             ...   \n",
+      "370        Sedan        Sedan_train_orig_train_00836_resized.jpg   \n",
+      "371          SUV           SUV_train_orig_test_01121_resized.jpg   \n",
+      "372  Convertible  Convertible_train_orig_train_04053_resized.jpg   \n",
+      "373          SUV           SUV_train_orig_test_00651_resized.jpg   \n",
+      "374          SUV           SUV_train_orig_test_03924_resized.jpg   \n",
       "\n",
       "                                       image_path_blur  \\\n",
-      "0    ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
+      "0    ../../../Images/train/Blurred/Sedan_train_orig...   \n",
       "1    ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
-      "2    ../../../Images/train/Blurred/Sedan_train_orig...   \n",
-      "3    ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
+      "2    ../../../Images/train/Blurred/Convertible_trai...   \n",
+      "3    ../../../Images/train/Blurred/Sedan_train_orig...   \n",
       "4    ../../../Images/train/Blurred/Sedan_train_orig...   \n",
       "..                                                 ...   \n",
-      "370  ../../../Images/train/Blurred/Convertible_trai...   \n",
+      "370  ../../../Images/train/Blurred/Sedan_train_orig...   \n",
       "371  ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
-      "372  ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
-      "373  ../../../Images/train/Blurred/Pickup_train_ori...   \n",
-      "374  ../../../Images/train/Blurred/Convertible_trai...   \n",
+      "372  ../../../Images/train/Blurred/Convertible_trai...   \n",
+      "373  ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
+      "374  ../../../Images/train/Blurred/SUV_train_orig_t...   \n",
       "\n",
       "                                    image_path_no_blur  All Features_PCA_0  \\\n",
-      "0    ../../../Images/train/No_Blur/SUV_train_orig_t...           25.145085   \n",
-      "1    ../../../Images/train/No_Blur/SUV_train_orig_t...            7.717482   \n",
-      "2    ../../../Images/train/No_Blur/Sedan_train_orig...            5.180652   \n",
-      "3    ../../../Images/train/No_Blur/SUV_train_orig_t...           19.116697   \n",
-      "4    ../../../Images/train/No_Blur/Sedan_train_orig...           -7.212819   \n",
+      "0    ../../../Images/train/No_Blur/Sedan_train_orig...            2.538193   \n",
+      "1    ../../../Images/train/No_Blur/SUV_train_orig_t...            4.773567   \n",
+      "2    ../../../Images/train/No_Blur/Convertible_trai...           -3.459115   \n",
+      "3    ../../../Images/train/No_Blur/Sedan_train_orig...           -4.189785   \n",
+      "4    ../../../Images/train/No_Blur/Sedan_train_orig...            2.809561   \n",
       "..                                                 ...                 ...   \n",
-      "370  ../../../Images/train/No_Blur/Convertible_trai...          -19.302218   \n",
-      "371  ../../../Images/train/No_Blur/SUV_train_orig_t...           24.203458   \n",
-      "372  ../../../Images/train/No_Blur/SUV_train_orig_t...           -5.569236   \n",
-      "373  ../../../Images/train/No_Blur/Pickup_train_ori...           22.367278   \n",
-      "374  ../../../Images/train/No_Blur/Convertible_trai...          -21.406933   \n",
+      "370  ../../../Images/train/No_Blur/Sedan_train_orig...           -6.509076   \n",
+      "371  ../../../Images/train/No_Blur/SUV_train_orig_t...           15.078087   \n",
+      "372  ../../../Images/train/No_Blur/Convertible_trai...            2.154696   \n",
+      "373  ../../../Images/train/No_Blur/SUV_train_orig_t...           28.196114   \n",
+      "374  ../../../Images/train/No_Blur/SUV_train_orig_t...           -9.362688   \n",
       "\n",
       "     All Features_PCA_1  All Features_PCA_2  All Features_PCA_3  \\\n",
-      "0              8.947328           -1.386140          -12.489963   \n",
-      "1             25.251725           -2.878187            8.619907   \n",
-      "2            -18.764555           -4.975013           13.694222   \n",
-      "3             -0.526699           -5.733903           -9.487318   \n",
-      "4            -11.933631          -11.039178           -6.331898   \n",
+      "0            -11.293142          -14.049952           -9.703988   \n",
+      "1             18.151963            2.411749            2.853611   \n",
+      "2             -2.144880          -12.615752           -0.155644   \n",
+      "3             -0.634370            5.954816            0.823730   \n",
+      "4             -8.023968           -1.684429           10.835074   \n",
       "..                  ...                 ...                 ...   \n",
-      "370            8.102629            2.898998          -12.297525   \n",
-      "371            3.418982            6.580006          -12.461895   \n",
-      "372           11.785905          -12.864676           -2.193522   \n",
-      "373           -5.793724            8.713184          -22.586954   \n",
-      "374           20.327924            8.860998           15.090791   \n",
+      "370            0.116229          -10.185959           -4.163957   \n",
+      "371            2.040913           11.858702           -1.468266   \n",
+      "372           16.132917          -10.852185          -10.378342   \n",
+      "373            6.876242           -3.621222          -15.846212   \n",
+      "374          -12.107665           -0.126856           -7.944141   \n",
       "\n",
       "     All Features_PCA_4  All Features_PCA_5  ...  All Features_PCA_1240  \\\n",
-      "0             -6.343173           -3.717600  ...               0.439435   \n",
-      "1             -0.023036            5.182604  ...              -0.353133   \n",
-      "2             -5.004696           -3.039336  ...               0.311289   \n",
-      "3             -5.491038            0.997209  ...               0.335375   \n",
-      "4            -10.326670           -4.997215  ...              -0.236657   \n",
+      "0              6.818367           -0.542333  ...              -0.247541   \n",
+      "1            -16.224099            1.837664  ...               0.431482   \n",
+      "2             25.821437            3.029406  ...               1.169764   \n",
+      "3            -15.549448           -8.212064  ...              -0.582540   \n",
+      "4            -20.736166            6.663403  ...              -0.728117   \n",
       "..                  ...                 ...  ...                    ...   \n",
-      "370           29.755198            0.850605  ...              -1.109317   \n",
-      "371           -7.760661            2.853156  ...               0.326286   \n",
-      "372          -14.914350            9.404342  ...              -0.143081   \n",
-      "373            3.974342            4.593227  ...               0.777182   \n",
-      "374           19.285839          -11.446975  ...              -0.822633   \n",
+      "370           -2.703523          -19.875977  ...               0.265139   \n",
+      "371           -4.556930           -2.676338  ...               0.058400   \n",
+      "372           14.743664          -11.334160  ...              -0.437504   \n",
+      "373            7.319688            3.839812  ...               0.336920   \n",
+      "374           -7.905347           28.977466  ...               0.143804   \n",
       "\n",
       "     All Features_PCA_1241  All Features_PCA_1242  All Features_PCA_1243  \\\n",
-      "0                 0.568867              -0.650437              -0.167775   \n",
-      "1                 0.309505               0.020904              -1.079875   \n",
-      "2                -0.440603              -0.374321              -0.906506   \n",
-      "3                -0.972303               0.742242               0.178635   \n",
-      "4                 0.396470              -0.210886              -0.236385   \n",
+      "0                 0.227732              -0.207891               0.324502   \n",
+      "1                -0.309091               0.276872               0.211702   \n",
+      "2                -0.589799               0.108177               0.464796   \n",
+      "3                 0.042242              -0.037586              -0.964603   \n",
+      "4                -0.080076              -0.181618               0.127006   \n",
       "..                     ...                    ...                    ...   \n",
-      "370              -0.991955              -0.207190              -0.576410   \n",
-      "371              -0.059389              -0.304406               1.186249   \n",
-      "372               0.004118              -0.802897               0.729549   \n",
-      "373              -0.040625              -0.660089               0.906133   \n",
-      "374              -0.089246              -0.768664              -0.279156   \n",
+      "370               0.269937              -0.103837               0.126044   \n",
+      "371               0.486364               0.752741              -0.172557   \n",
+      "372               0.352923               0.299387               0.324642   \n",
+      "373               0.489210               0.518745              -0.452856   \n",
+      "374              -0.459470               0.502148              -0.554328   \n",
       "\n",
       "     All Features_PCA_1244  All Features_PCA_1245  All Features_PCA_1246  \\\n",
-      "0                -0.104855              -0.713800              -0.294475   \n",
-      "1                 0.737994               0.546003              -0.946220   \n",
-      "2                -0.441965              -0.318905              -0.063911   \n",
-      "3                 0.692253              -0.085700              -0.049715   \n",
-      "4                -0.101107              -0.846370              -0.568283   \n",
+      "0                -0.896738              -1.205802              -0.047746   \n",
+      "1                -0.205586               0.210954              -0.599031   \n",
+      "2                 1.169551              -0.356363               0.309009   \n",
+      "3                 0.622351               0.071866               0.182031   \n",
+      "4                -0.514954              -0.210094               0.535480   \n",
       "..                     ...                    ...                    ...   \n",
-      "370              -0.388748              -0.323398               0.116702   \n",
-      "371              -0.006797              -0.050300               0.388822   \n",
-      "372              -0.438863               0.000227              -0.152263   \n",
-      "373              -0.748768              -0.409377              -0.869255   \n",
-      "374               0.461895               0.296120              -0.464550   \n",
+      "370               0.013048              -0.470904               0.251057   \n",
+      "371               0.486907               0.449322               0.137839   \n",
+      "372               0.297439              -0.402218              -0.165099   \n",
+      "373               0.035330               0.009263               0.464656   \n",
+      "374              -0.053075              -0.252387              -0.493491   \n",
       "\n",
       "     All Features_PCA_1247  All Features_PCA_1248  All Features_PCA_1249  \n",
-      "0                 0.870414              -0.041488               0.358186  \n",
-      "1                -0.001505               1.127295              -0.032759  \n",
-      "2                -0.440967              -0.423951              -0.239264  \n",
-      "3                -0.303535               0.169654               0.373774  \n",
-      "4                 0.468793              -0.002949               0.192095  \n",
+      "0                -1.103540              -0.042228               0.023136  \n",
+      "1                 0.769147              -0.292447               0.849481  \n",
+      "2                -0.507190              -0.118509              -0.341984  \n",
+      "3                 0.171947               0.397056               0.266889  \n",
+      "4                -0.267971               0.496315               0.037196  \n",
       "..                     ...                    ...                    ...  \n",
-      "370              -0.088474              -0.521342              -0.621816  \n",
-      "371               0.713417              -0.166579              -0.265210  \n",
-      "372               0.636467               0.367062              -0.149499  \n",
-      "373              -0.506983              -0.772646              -0.105348  \n",
-      "374              -1.029694              -0.305403               0.011698  \n",
+      "370               0.497211               0.025574               0.173134  \n",
+      "371               0.953632              -0.082474              -0.155186  \n",
+      "372               0.938498               0.108808              -0.304107  \n",
+      "373              -0.574255               0.938688               0.001250  \n",
+      "374              -0.175240               0.491581               0.258595  \n",
       "\n",
       "[6003 rows x 1254 columns]\n"
      ]
@@ -196,10 +196,10 @@
    "id": "59126e9f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-07T22:20:27.728647Z",
-     "iopub.status.busy": "2024-04-07T22:20:27.728461Z",
-     "iopub.status.idle": "2024-04-07T22:20:27.806460Z",
-     "shell.execute_reply": "2024-04-07T22:20:27.806014Z"
+     "iopub.execute_input": "2024-04-14T17:59:42.327033Z",
+     "iopub.status.busy": "2024-04-14T17:59:42.326800Z",
+     "iopub.status.idle": "2024-04-14T17:59:42.601173Z",
+     "shell.execute_reply": "2024-04-14T17:59:42.600249Z"
     }
    },
    "outputs": [],
@@ -211,18 +211,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d797f14b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-07T22:20:27.809585Z",
-     "iopub.status.busy": "2024-04-07T22:20:27.809174Z",
-     "iopub.status.idle": "2024-04-07T22:55:17.993920Z",
-     "shell.execute_reply": "2024-04-07T22:55:17.993503Z"
+     "iopub.execute_input": "2024-04-14T17:59:42.606039Z",
+     "iopub.status.busy": "2024-04-14T17:59:42.605809Z",
+     "iopub.status.idle": "2024-04-14T19:28:04.890699Z",
+     "shell.execute_reply": "2024-04-14T19:28:04.888129Z"
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/users/ijyliu/conda/envs/scf_general/lib/python3.11/site-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training time in minutes:  88.3571818669637\n",
+      "Training time per image in minutes:  0.01471883755904776\n",
+      "Train accuracy of best model:  1.0\n",
+      "Mean cross validated accuracy of best model:  0.8604021648626144\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hyperparameters searched:  {'n_estimators': [100, 200, 300], 'learning_rate': [0.1, 0.3, 0.5], 'max_depth': [2, 3, 5], 'min_child_weight': [1, 3, 5], 'k_folds': 5}\n",
+      "Tuned hyperparameters:  {'learning_rate': 0.5, 'max_depth': 3, 'min_child_weight': 3, 'n_estimators': 300}\n"
+     ]
+    }
+   ],
    "source": [
     "fit_xgboost_classifier(X_train, y_train, classifier_name)"
    ]
@@ -244,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
