--- a/Code/Classification/RandomForest/Fit_Random_Forest_Classifier_All_Features_PCA.ipynb
+++ b/Code/Classification/RandomForest/Fit_Random_Forest_Classifier_All_Features_PCA.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:12.674692Z",
-     "iopub.status.busy": "2024-04-14T05:28:12.673871Z",
-     "iopub.status.idle": "2024-04-14T05:28:32.630663Z",
-     "shell.execute_reply": "2024-04-14T05:28:32.629800Z"
+     "iopub.execute_input": "2024-04-14T18:13:35.908465Z",
+     "iopub.status.busy": "2024-04-14T18:13:35.907587Z",
+     "iopub.status.idle": "2024-04-14T18:13:38.375106Z",
+     "shell.execute_reply": "2024-04-14T18:13:38.373929Z"
     }
    },
    "outputs": [],
@@ -29,10 +29,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:32.636036Z",
-     "iopub.status.busy": "2024-04-14T05:28:32.635589Z",
-     "iopub.status.idle": "2024-04-14T05:28:32.640125Z",
-     "shell.execute_reply": "2024-04-14T05:28:32.639277Z"
+     "iopub.execute_input": "2024-04-14T18:13:38.380570Z",
+     "iopub.status.busy": "2024-04-14T18:13:38.380116Z",
+     "iopub.status.idle": "2024-04-14T18:13:38.385097Z",
+     "shell.execute_reply": "2024-04-14T18:13:38.383925Z"
     }
    },
    "outputs": [],
@@ -46,10 +46,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:32.645439Z",
-     "iopub.status.busy": "2024-04-14T05:28:32.644712Z",
-     "iopub.status.idle": "2024-04-14T05:28:32.649536Z",
-     "shell.execute_reply": "2024-04-14T05:28:32.648592Z"
+     "iopub.execute_input": "2024-04-14T18:13:38.390002Z",
+     "iopub.status.busy": "2024-04-14T18:13:38.389592Z",
+     "iopub.status.idle": "2024-04-14T18:13:38.394780Z",
+     "shell.execute_reply": "2024-04-14T18:13:38.393527Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:32.655656Z",
-     "iopub.status.busy": "2024-04-14T05:28:32.654644Z",
-     "iopub.status.idle": "2024-04-14T05:28:38.550241Z",
-     "shell.execute_reply": "2024-04-14T05:28:38.549394Z"
+     "iopub.execute_input": "2024-04-14T18:13:38.400107Z",
+     "iopub.status.busy": "2024-04-14T18:13:38.399629Z",
+     "iopub.status.idle": "2024-04-14T18:13:40.217987Z",
+     "shell.execute_reply": "2024-04-14T18:13:40.217235Z"
     }
    },
    "outputs": [
@@ -212,10 +212,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:38.605364Z",
-     "iopub.status.busy": "2024-04-14T05:28:38.604817Z",
-     "iopub.status.idle": "2024-04-14T05:28:38.785871Z",
-     "shell.execute_reply": "2024-04-14T05:28:38.785104Z"
+     "iopub.execute_input": "2024-04-14T18:13:40.263083Z",
+     "iopub.status.busy": "2024-04-14T18:13:40.262550Z",
+     "iopub.status.idle": "2024-04-14T18:13:40.431631Z",
+     "shell.execute_reply": "2024-04-14T18:13:40.430885Z"
     }
    },
    "outputs": [],
@@ -235,10 +235,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:38.790516Z",
-     "iopub.status.busy": "2024-04-14T05:28:38.790314Z",
-     "iopub.status.idle": "2024-04-14T08:03:23.245275Z",
-     "shell.execute_reply": "2024-04-14T08:03:23.244456Z"
+     "iopub.execute_input": "2024-04-14T18:13:40.436185Z",
+     "iopub.status.busy": "2024-04-14T18:13:40.436021Z",
+     "iopub.status.idle": "2024-04-14T20:16:00.882100Z",
+     "shell.execute_reply": "2024-04-14T20:16:00.880903Z"
     }
    },
    "outputs": [
@@ -247,15 +247,23 @@
      "output_type": "stream",
      "text": [
       "hyperparameter settings\n",
-      "{'n_estimators': [100, 500, 1000], 'max_features': ['sqrt'], 'max_depth': [10, 20, 30, 40, 50, 60], 'min_samples_split': [5, 10], 'min_samples_leaf': [2, 4], 'bootstrap': [True, False]}\n"
+      "{'n_estimators': [500, 1000, 1500], 'max_features': ['sqrt'], 'max_depth': [20, 40, 60, 80], 'bootstrap': [True, False], 'min_samples_leaf': [1, 2]}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/users/ijyliu/conda/envs/scf_general/lib/python3.11/site-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training time in minutes:  154.65693965355555\n",
-      "training time per image in minutes:  0.025763274971440205\n"
+      "training time in minutes:  122.19864570697149\n",
+      "training time per image in minutes:  0.02035626281975204\n"
      ]
     },
     {
@@ -263,15 +271,15 @@
      "output_type": "stream",
      "text": [
       "train accuracy of best model:  1.0\n",
-      "mean cross validated accuracy of best model:  0.6959852900360811\n"
+      "mean cross validated accuracy of best model:  0.6989836247571468\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hyperparameters searched:  {'n_estimators': [100, 500, 1000], 'max_features': ['sqrt'], 'max_depth': [10, 20, 30, 40, 50, 60], 'min_samples_split': [5, 10], 'min_samples_leaf': [2, 4], 'bootstrap': [True, False]}\n",
-      "tuned hyperparameters:  {'bootstrap': False, 'max_depth': 60, 'max_features': 'sqrt', 'min_samples_leaf': 2, 'min_samples_split': 5, 'n_estimators': 1000}\n"
+      "hyperparameters searched:  {'n_estimators': [500, 1000, 1500], 'max_features': ['sqrt'], 'max_depth': [20, 40, 60, 80], 'bootstrap': [True, False], 'min_samples_leaf': [1, 2]}\n",
+      "tuned hyperparameters:  {'bootstrap': False, 'max_depth': 60, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'n_estimators': 1500}\n"
      ]
     }
    ],
