--- a/Code/Classification/RandomForest/Fit_Random_Forest_Classifier_Individual_Features_PCA.ipynb
+++ b/Code/Classification/RandomForest/Fit_Random_Forest_Classifier_Individual_Features_PCA.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:17.974125Z",
-     "iopub.status.busy": "2024-04-14T05:28:17.973647Z",
-     "iopub.status.idle": "2024-04-14T05:28:32.630942Z",
-     "shell.execute_reply": "2024-04-14T05:28:32.629737Z"
+     "iopub.execute_input": "2024-04-14T18:13:28.022176Z",
+     "iopub.status.busy": "2024-04-14T18:13:28.021679Z",
+     "iopub.status.idle": "2024-04-14T18:13:30.776767Z",
+     "shell.execute_reply": "2024-04-14T18:13:30.775103Z"
     }
    },
    "outputs": [],
@@ -29,10 +29,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:32.636317Z",
-     "iopub.status.busy": "2024-04-14T05:28:32.635640Z",
-     "iopub.status.idle": "2024-04-14T05:28:32.641709Z",
-     "shell.execute_reply": "2024-04-14T05:28:32.640465Z"
+     "iopub.execute_input": "2024-04-14T18:13:30.783804Z",
+     "iopub.status.busy": "2024-04-14T18:13:30.782850Z",
+     "iopub.status.idle": "2024-04-14T18:13:30.789213Z",
+     "shell.execute_reply": "2024-04-14T18:13:30.788096Z"
     }
    },
    "outputs": [],
@@ -46,10 +46,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:32.647684Z",
-     "iopub.status.busy": "2024-04-14T05:28:32.646711Z",
-     "iopub.status.idle": "2024-04-14T05:28:32.652344Z",
-     "shell.execute_reply": "2024-04-14T05:28:32.651106Z"
+     "iopub.execute_input": "2024-04-14T18:13:30.795050Z",
+     "iopub.status.busy": "2024-04-14T18:13:30.794281Z",
+     "iopub.status.idle": "2024-04-14T18:13:30.799892Z",
+     "shell.execute_reply": "2024-04-14T18:13:30.798796Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:32.658214Z",
-     "iopub.status.busy": "2024-04-14T05:28:32.657705Z",
-     "iopub.status.idle": "2024-04-14T05:28:38.892177Z",
-     "shell.execute_reply": "2024-04-14T05:28:38.891674Z"
+     "iopub.execute_input": "2024-04-14T18:13:30.806157Z",
+     "iopub.status.busy": "2024-04-14T18:13:30.805172Z",
+     "iopub.status.idle": "2024-04-14T18:13:33.461906Z",
+     "shell.execute_reply": "2024-04-14T18:13:33.461121Z"
     }
    },
    "outputs": [
@@ -244,10 +244,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:38.944987Z",
-     "iopub.status.busy": "2024-04-14T05:28:38.944053Z",
-     "iopub.status.idle": "2024-04-14T05:28:39.014542Z",
-     "shell.execute_reply": "2024-04-14T05:28:39.014117Z"
+     "iopub.execute_input": "2024-04-14T18:13:33.515272Z",
+     "iopub.status.busy": "2024-04-14T18:13:33.514044Z",
+     "iopub.status.idle": "2024-04-14T18:13:33.591057Z",
+     "shell.execute_reply": "2024-04-14T18:13:33.590224Z"
     }
    },
    "outputs": [
@@ -3506,10 +3506,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:39.020768Z",
-     "iopub.status.busy": "2024-04-14T05:28:39.020597Z",
-     "iopub.status.idle": "2024-04-14T05:28:39.290379Z",
-     "shell.execute_reply": "2024-04-14T05:28:39.289704Z"
+     "iopub.execute_input": "2024-04-14T18:13:33.595205Z",
+     "iopub.status.busy": "2024-04-14T18:13:33.594955Z",
+     "iopub.status.idle": "2024-04-14T18:13:33.891861Z",
+     "shell.execute_reply": "2024-04-14T18:13:33.891014Z"
     }
    },
    "outputs": [],
@@ -3529,10 +3529,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:39.294900Z",
-     "iopub.status.busy": "2024-04-14T05:28:39.294673Z",
-     "iopub.status.idle": "2024-04-14T07:48:11.694132Z",
-     "shell.execute_reply": "2024-04-14T07:48:11.692882Z"
+     "iopub.execute_input": "2024-04-14T18:13:33.896827Z",
+     "iopub.status.busy": "2024-04-14T18:13:33.896553Z",
+     "iopub.status.idle": "2024-04-14T20:06:07.663428Z",
+     "shell.execute_reply": "2024-04-14T20:06:07.662785Z"
     }
    },
    "outputs": [
@@ -3541,15 +3541,23 @@
      "output_type": "stream",
      "text": [
       "hyperparameter settings\n",
-      "{'n_estimators': [100, 500, 1000], 'max_features': ['sqrt'], 'max_depth': [10, 20, 30, 40, 50, 60], 'min_samples_split': [5, 10], 'min_samples_leaf': [2, 4], 'bootstrap': [True, False]}\n"
+      "{'n_estimators': [500, 1000, 1500], 'max_features': ['sqrt'], 'max_depth': [20, 40, 60, 80], 'bootstrap': [True, False], 'min_samples_leaf': [1, 2]}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/users/ijyliu/conda/envs/scf_general/lib/python3.11/site-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+      "  warnings.warn(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training time in minutes:  139.4410367846489\n",
-      "training time per image in minutes:  0.023228558518182393\n"
+      "training time in minutes:  112.52016350825627\n",
+      "training time per image in minutes:  0.018743988590414172\n"
      ]
     },
     {
@@ -3557,15 +3565,15 @@
      "output_type": "stream",
      "text": [
       "train accuracy of best model:  1.0\n",
-      "mean cross validated accuracy of best model:  0.8077581182348045\n"
+      "mean cross validated accuracy of best model:  0.8084256175409381\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hyperparameters searched:  {'n_estimators': [100, 500, 1000], 'max_features': ['sqrt'], 'max_depth': [10, 20, 30, 40, 50, 60], 'min_samples_split': [5, 10], 'min_samples_leaf': [2, 4], 'bootstrap': [True, False]}\n",
-      "tuned hyperparameters:  {'bootstrap': False, 'max_depth': 50, 'max_features': 'sqrt', 'min_samples_leaf': 2, 'min_samples_split': 5, 'n_estimators': 1000}\n"
+      "hyperparameters searched:  {'n_estimators': [500, 1000, 1500], 'max_features': ['sqrt'], 'max_depth': [20, 40, 60, 80], 'bootstrap': [True, False], 'min_samples_leaf': [1, 2]}\n",
+      "tuned hyperparameters:  {'bootstrap': False, 'max_depth': 40, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'n_estimators': 500}\n"
      ]
     }
    ],
