--- a/Code/Classification/SVM/Fit_SVM_Classifier_VGG.ipynb
+++ b/Code/Classification/SVM/Fit_SVM_Classifier_VGG.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:23:59.506187Z",
-     "iopub.status.busy": "2024-04-14T17:23:59.505898Z",
-     "iopub.status.idle": "2024-04-14T17:24:00.736299Z",
-     "shell.execute_reply": "2024-04-14T17:24:00.735571Z"
+     "iopub.execute_input": "2024-04-14T19:36:03.985506Z",
+     "iopub.status.busy": "2024-04-14T19:36:03.985213Z",
+     "iopub.status.idle": "2024-04-14T19:36:05.386210Z",
+     "shell.execute_reply": "2024-04-14T19:36:05.385756Z"
     }
    },
    "outputs": [],
@@ -29,10 +29,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:24:00.738587Z",
-     "iopub.status.busy": "2024-04-14T17:24:00.738367Z",
-     "iopub.status.idle": "2024-04-14T17:24:00.741114Z",
-     "shell.execute_reply": "2024-04-14T17:24:00.740613Z"
+     "iopub.execute_input": "2024-04-14T19:36:05.388615Z",
+     "iopub.status.busy": "2024-04-14T19:36:05.388366Z",
+     "iopub.status.idle": "2024-04-14T19:36:05.390848Z",
+     "shell.execute_reply": "2024-04-14T19:36:05.390558Z"
     }
    },
    "outputs": [],
@@ -46,10 +46,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:24:00.742682Z",
-     "iopub.status.busy": "2024-04-14T17:24:00.742444Z",
-     "iopub.status.idle": "2024-04-14T17:24:00.744739Z",
-     "shell.execute_reply": "2024-04-14T17:24:00.744255Z"
+     "iopub.execute_input": "2024-04-14T19:36:05.392373Z",
+     "iopub.status.busy": "2024-04-14T19:36:05.392253Z",
+     "iopub.status.idle": "2024-04-14T19:36:05.394131Z",
+     "shell.execute_reply": "2024-04-14T19:36:05.393866Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:24:00.746362Z",
-     "iopub.status.busy": "2024-04-14T17:24:00.746136Z",
-     "iopub.status.idle": "2024-04-14T17:24:01.248852Z",
-     "shell.execute_reply": "2024-04-14T17:24:01.248171Z"
+     "iopub.execute_input": "2024-04-14T19:36:05.395642Z",
+     "iopub.status.busy": "2024-04-14T19:36:05.395527Z",
+     "iopub.status.idle": "2024-04-14T19:36:05.910304Z",
+     "shell.execute_reply": "2024-04-14T19:36:05.909924Z"
     }
    },
    "outputs": [
@@ -251,10 +251,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:24:01.284711Z",
-     "iopub.status.busy": "2024-04-14T17:24:01.284506Z",
-     "iopub.status.idle": "2024-04-14T17:24:01.316600Z",
-     "shell.execute_reply": "2024-04-14T17:24:01.315915Z"
+     "iopub.execute_input": "2024-04-14T19:36:05.947057Z",
+     "iopub.status.busy": "2024-04-14T19:36:05.946858Z",
+     "iopub.status.idle": "2024-04-14T19:36:05.976053Z",
+     "shell.execute_reply": "2024-04-14T19:36:05.975629Z"
     }
    },
    "outputs": [],
@@ -274,10 +274,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:24:01.318629Z",
-     "iopub.status.busy": "2024-04-14T17:24:01.318463Z",
-     "iopub.status.idle": "2024-04-14T17:38:24.837052Z",
-     "shell.execute_reply": "2024-04-14T17:38:24.836614Z"
+     "iopub.execute_input": "2024-04-14T19:36:05.978018Z",
+     "iopub.status.busy": "2024-04-14T19:36:05.977888Z",
+     "iopub.status.idle": "2024-04-14T20:05:07.345274Z",
+     "shell.execute_reply": "2024-04-14T20:05:07.344740Z"
     }
    },
    "outputs": [
@@ -285,8 +285,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time in minutes:  14.296274439493816\n",
-      "Training time per image in minutes:  0.002381521645759423\n"
+      "Training time in minutes:  28.929709684848785\n",
+      "Training time per image in minutes:  0.004819208676469896\n"
      ]
     },
     {
@@ -294,15 +294,9 @@
      "output_type": "stream",
      "text": [
       "Train accuracy of best model:  0.9431950691321006\n",
-      "Mean cross validated accuracy of best model:  0.8697316125451013\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hyperparameters searched:  {'c_values': [0.001, 0.01, 0.1, 1], 'kernel_grid': ['rbf', 'poly'], 'gamma_grid': [0.001, 0.01, 0.1, 1], 'degree_grid': [2, 4], 'k_folds': 5}\n",
-      "Tuned hyperparameters:  {'C': 1, 'degree': 2, 'gamma': 0.001, 'kernel': 'rbf'}\n"
+      "Mean cross validated accuracy of best model:  0.8697316125451013\n",
+      "Hyperparameters searched:  {'c_values': [0.01, 0.1, 1, 10], 'kernel_grid': ['rbf', 'poly'], 'gamma_grid': [0.001, 0.01, 0.1, 1], 'degree_grid': [2, 4], 'class_weight': ['balanced', None], 'k_folds': 5}\n",
+      "Tuned hyperparameters:  {'C': 1, 'class_weight': None, 'degree': 2, 'gamma': 0.001, 'kernel': 'rbf'}\n"
      ]
     }
    ],
