--- a/Code/Classification/XGBoost/XGBoost_predictions_All_Features_PCA.ipynb
+++ b/Code/Classification/XGBoost/XGBoost_predictions_All_Features_PCA.ipynb
@@ -182,8 +182,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction time in minutes:  0.00039385159810384116\n",
-      "Prediction time per image in minutes:  2.6450745339411766e-07\n",
+      "Prediction time in minutes:  0.0005299170811971028\n",
+      "Prediction time per image in minutes:  3.558878987220301e-07\n",
+      "limited cols in test data\n",
+      "added to test data\n",
       "Predictions made successfully.\n"
      ]
     }
