--- a/Code/Classification/XGBoost/XGBoost_predictions_Individual_Features_PCA.ipynb
+++ b/Code/Classification/XGBoost/XGBoost_predictions_Individual_Features_PCA.ipynb
@@ -221,8 +221,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction time in minutes:  0.00031812191009521483\n",
-      "Prediction time per image in minutes:  2.1364802558442904e-07\n",
+      "Prediction time in minutes:  0.00041058858235677086\n",
+      "Prediction time per image in minutes:  2.757478726371866e-07\n",
+      "limited cols in test data\n",
+      "added to test data\n",
       "Predictions made successfully.\n"
      ]
     }
