--- a/Code/Classification/Logistic Regression/Logistic_Regression_Classifier_Feature_Importance_All_Data.ipynb
+++ b/Code/Classification/Logistic Regression/Logistic_Regression_Classifier_Feature_Importance_All_Data.ipynb
@@ -272,7 +272,7 @@
    "outputs": [],
    "source": [
     "# Perform permutation importance\n",
-    "result = permutation_importance(model, X_test, y_test, n_repeats=1000, random_state=222, n_jobs=-1)\n",
+    "result = permutation_importance(model, X_test, y_test, random_state=222, n_jobs=-1)\n",
     "\n",
     "# Put column name, mean and std in a dataframe\n",
     "result = pd.DataFrame({'feature': test_data.select_dtypes(include=np.number).columns, 'mean': result.importances_mean, 'std': result.importances_std})\n",
