--- a/Code/Classification/RandomForest/Fit_Random_Forest_Classifier_All_Data.ipynb
+++ b/Code/Classification/RandomForest/Fit_Random_Forest_Classifier_All_Data.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:11.293002Z",
-     "iopub.status.busy": "2024-04-14T05:28:11.292231Z",
-     "iopub.status.idle": "2024-04-14T05:28:32.632052Z",
-     "shell.execute_reply": "2024-04-14T05:28:32.631195Z"
+     "iopub.execute_input": "2024-04-14T18:13:47.095008Z",
+     "iopub.status.busy": "2024-04-14T18:13:47.094271Z",
+     "iopub.status.idle": "2024-04-14T18:13:49.270434Z",
+     "shell.execute_reply": "2024-04-14T18:13:49.269695Z"
     }
    },
    "outputs": [],
@@ -29,10 +29,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:32.636976Z",
-     "iopub.status.busy": "2024-04-14T05:28:32.636651Z",
-     "iopub.status.idle": "2024-04-14T05:28:32.640475Z",
-     "shell.execute_reply": "2024-04-14T05:28:32.639779Z"
+     "iopub.execute_input": "2024-04-14T18:13:49.275471Z",
+     "iopub.status.busy": "2024-04-14T18:13:49.275145Z",
+     "iopub.status.idle": "2024-04-14T18:13:49.278969Z",
+     "shell.execute_reply": "2024-04-14T18:13:49.278254Z"
     }
    },
    "outputs": [],
@@ -46,10 +46,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:32.644686Z",
-     "iopub.status.busy": "2024-04-14T05:28:32.644461Z",
-     "iopub.status.idle": "2024-04-14T05:28:32.648128Z",
-     "shell.execute_reply": "2024-04-14T05:28:32.647414Z"
+     "iopub.execute_input": "2024-04-14T18:13:49.283593Z",
+     "iopub.status.busy": "2024-04-14T18:13:49.283199Z",
+     "iopub.status.idle": "2024-04-14T18:13:49.287213Z",
+     "shell.execute_reply": "2024-04-14T18:13:49.286421Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:32.652413Z",
-     "iopub.status.busy": "2024-04-14T05:28:32.652197Z",
-     "iopub.status.idle": "2024-04-14T05:28:45.712741Z",
-     "shell.execute_reply": "2024-04-14T05:28:45.711833Z"
+     "iopub.execute_input": "2024-04-14T18:13:49.291667Z",
+     "iopub.status.busy": "2024-04-14T18:13:49.291384Z",
+     "iopub.status.idle": "2024-04-14T18:13:58.871486Z",
+     "shell.execute_reply": "2024-04-14T18:13:58.870287Z"
     }
    },
    "outputs": [
@@ -251,10 +251,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:45.757012Z",
-     "iopub.status.busy": "2024-04-14T05:28:45.755763Z",
-     "iopub.status.idle": "2024-04-14T05:28:48.840046Z",
-     "shell.execute_reply": "2024-04-14T05:28:48.839213Z"
+     "iopub.execute_input": "2024-04-14T18:13:58.923163Z",
+     "iopub.status.busy": "2024-04-14T18:13:58.922577Z",
+     "iopub.status.idle": "2024-04-14T18:13:59.776214Z",
+     "shell.execute_reply": "2024-04-14T18:13:59.775472Z"
     }
    },
    "outputs": [],
@@ -274,10 +274,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T05:28:48.844542Z",
-     "iopub.status.busy": "2024-04-14T05:28:48.844344Z",
-     "iopub.status.idle": "2024-04-14T09:56:22.581029Z",
-     "shell.execute_reply": "2024-04-14T09:56:22.579615Z"
+     "iopub.execute_input": "2024-04-14T18:13:59.781021Z",
+     "iopub.status.busy": "2024-04-14T18:13:59.780820Z",
+     "iopub.status.idle": "2024-04-14T21:33:51.369236Z",
+     "shell.execute_reply": "2024-04-14T21:33:51.368307Z"
     }
    },
    "outputs": [
@@ -286,15 +286,15 @@
      "output_type": "stream",
      "text": [
       "hyperparameter settings\n",
-      "{'n_estimators': [100, 500, 1000], 'max_features': ['sqrt'], 'max_depth': [10, 20, 30, 40, 50, 60], 'min_samples_split': [5, 10], 'min_samples_leaf': [2, 4], 'bootstrap': [True, False]}\n"
+      "{'n_estimators': [500, 1000, 1500], 'max_features': ['sqrt'], 'max_depth': [20, 40, 60, 80], 'bootstrap': [True, False], 'min_samples_leaf': [1, 2]}\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training time in minutes:  267.4868530035019\n",
-      "training time per image in minutes:  0.044558862735882374\n"
+      "training time in minutes:  199.77190163930257\n",
+      "training time per image in minutes:  0.03327867760108322\n"
      ]
     },
     {
@@ -302,15 +302,15 @@
      "output_type": "stream",
      "text": [
       "train accuracy of best model:  1.0\n",
-      "mean cross validated accuracy of best model:  0.861068276436303\n"
+      "mean cross validated accuracy of best model:  0.8615681376630585\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hyperparameters searched:  {'n_estimators': [100, 500, 1000], 'max_features': ['sqrt'], 'max_depth': [10, 20, 30, 40, 50, 60], 'min_samples_split': [5, 10], 'min_samples_leaf': [2, 4], 'bootstrap': [True, False]}\n",
-      "tuned hyperparameters:  {'bootstrap': False, 'max_depth': 30, 'max_features': 'sqrt', 'min_samples_leaf': 2, 'min_samples_split': 5, 'n_estimators': 1000}\n"
+      "hyperparameters searched:  {'n_estimators': [500, 1000, 1500], 'max_features': ['sqrt'], 'max_depth': [20, 40, 60, 80], 'bootstrap': [True, False], 'min_samples_leaf': [1, 2]}\n",
+      "tuned hyperparameters:  {'bootstrap': False, 'max_depth': 80, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'n_estimators': 1500}\n"
      ]
     }
    ],
