more feature importance

--- a/Code/Classification/Logistic Regression/Logistic_Regression_Classifier_Feature_Importance_All_Data_Train.ipynb
+++ b/Code/Classification/Logistic Regression/Logistic_Regression_Classifier_Feature_Importance_All_Data_Train.ipynb
@@ -217,12 +217,12 @@
     }
    ],
    "source": [
-    "test_data = combine_directory_parquets('../../../Data/Features/All Features/test')\n",
-    "print('all test data')\n",
-    "print(test_data)\n",
+    "train_data = combine_directory_parquets('../../../Data/Features/All Features/train')\n",
+    "print('all train data')\n",
+    "print(train_data)\n",
     "\n",
     "if sample_run:\n",
-    "    test_data = test_data.sample(frac=0.01).iloc[:, 0:10]"
+    "    train_data = train_data.sample(frac=0.01).iloc[:, 0:10]"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "outputs": [],
    "source": [
     "# Prepare matrices\n",
-    "X_test, y_test = prepare_matrices(test_data)"
+    "X_train, y_train = prepare_matrices(train_data)"
    ]
   },
   {
@@ -836,13 +836,13 @@
    ],
    "source": [
     "# Perform permutation importance\n",
-    "result = permutation_importance(model, X_test, y_test, n_repeats=100, random_state=222, n_jobs=-1)\n",
+    "result = permutation_importance(model, X_train, y_train, n_repeats=100, random_state=222, n_jobs=-1)\n",
     "\n",
     "# Put column name, mean and std in a dataframe\n",
-    "result = pd.DataFrame({'feature': test_data.select_dtypes(include=np.number).columns, 'mean': result.importances_mean, 'std': result.importances_std})\n",
+    "result = pd.DataFrame({'feature': train_data.select_dtypes(include=np.number).columns, 'mean': result.importances_mean, 'std': result.importances_std})\n",
     "\n",
     "# Output to Excel\n",
-    "result.to_excel('../../../Output/Classifier Inference/' + classifier_name + '/permutation_importance.xlsx', index=False)\n",
+    "result.to_excel('../../../Output/Classifier Inference/' + classifier_name + '/train_permutation_importance.xlsx', index=False)\n",
     "\n",
     "result"
    ]
