--- a/Code/Classification/SVM/Fit_SVM_Classifier_All_Features_PCA.ipynb
+++ b/Code/Classification/SVM/Fit_SVM_Classifier_All_Features_PCA.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:00:04.803735Z",
-     "iopub.status.busy": "2024-04-14T17:00:04.803262Z",
-     "iopub.status.idle": "2024-04-14T17:00:08.984420Z",
-     "shell.execute_reply": "2024-04-14T17:00:08.983203Z"
+     "iopub.execute_input": "2024-04-14T19:35:46.293718Z",
+     "iopub.status.busy": "2024-04-14T19:35:46.292520Z",
+     "iopub.status.idle": "2024-04-14T19:35:47.696271Z",
+     "shell.execute_reply": "2024-04-14T19:35:47.695477Z"
     }
    },
    "outputs": [],
@@ -29,10 +29,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:00:08.991213Z",
-     "iopub.status.busy": "2024-04-14T17:00:08.989977Z",
-     "iopub.status.idle": "2024-04-14T17:00:08.995676Z",
-     "shell.execute_reply": "2024-04-14T17:00:08.994632Z"
+     "iopub.execute_input": "2024-04-14T19:35:47.701008Z",
+     "iopub.status.busy": "2024-04-14T19:35:47.700743Z",
+     "iopub.status.idle": "2024-04-14T19:35:47.704607Z",
+     "shell.execute_reply": "2024-04-14T19:35:47.703907Z"
     }
    },
    "outputs": [],
@@ -46,10 +46,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:00:09.001211Z",
-     "iopub.status.busy": "2024-04-14T17:00:09.000379Z",
-     "iopub.status.idle": "2024-04-14T17:00:09.005453Z",
-     "shell.execute_reply": "2024-04-14T17:00:09.004399Z"
+     "iopub.execute_input": "2024-04-14T19:35:47.708664Z",
+     "iopub.status.busy": "2024-04-14T19:35:47.708491Z",
+     "iopub.status.idle": "2024-04-14T19:35:47.711864Z",
+     "shell.execute_reply": "2024-04-14T19:35:47.711248Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:00:09.011523Z",
-     "iopub.status.busy": "2024-04-14T17:00:09.010418Z",
-     "iopub.status.idle": "2024-04-14T17:00:12.211158Z",
-     "shell.execute_reply": "2024-04-14T17:00:12.209646Z"
+     "iopub.execute_input": "2024-04-14T19:35:47.715501Z",
+     "iopub.status.busy": "2024-04-14T19:35:47.715336Z",
+     "iopub.status.idle": "2024-04-14T19:35:50.720957Z",
+     "shell.execute_reply": "2024-04-14T19:35:50.720100Z"
     }
    },
    "outputs": [
@@ -212,10 +212,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:00:12.252066Z",
-     "iopub.status.busy": "2024-04-14T17:00:12.251509Z",
-     "iopub.status.idle": "2024-04-14T17:00:12.427755Z",
-     "shell.execute_reply": "2024-04-14T17:00:12.426821Z"
+     "iopub.execute_input": "2024-04-14T19:35:50.770295Z",
+     "iopub.status.busy": "2024-04-14T19:35:50.769737Z",
+     "iopub.status.idle": "2024-04-14T19:35:50.939749Z",
+     "shell.execute_reply": "2024-04-14T19:35:50.938951Z"
     }
    },
    "outputs": [],
@@ -235,10 +235,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:00:12.432516Z",
-     "iopub.status.busy": "2024-04-14T17:00:12.432321Z",
-     "iopub.status.idle": "2024-04-14T18:54:20.224762Z",
-     "shell.execute_reply": "2024-04-14T18:54:20.223659Z"
+     "iopub.execute_input": "2024-04-14T19:35:50.944151Z",
+     "iopub.status.busy": "2024-04-14T19:35:50.943969Z",
+     "iopub.status.idle": "2024-04-14T22:18:00.407413Z",
+     "shell.execute_reply": "2024-04-14T22:18:00.406583Z"
     }
    },
    "outputs": [
@@ -246,24 +246,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time in minutes:  113.50901206731797\n",
-      "Training time per image in minutes:  0.018908714320725967\n"
+      "Training time in minutes:  161.5198720018069\n",
+      "Training time per image in minutes:  0.026906525404265684\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy of best model:  0.9985007496251874\n",
-      "Mean cross validated accuracy of best model:  0.7706133777407715\n"
+      "Train accuracy of best model:  1.0\n",
+      "Mean cross validated accuracy of best model:  0.815259089647516\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hyperparameters searched:  {'c_values': [0.001, 0.01, 0.1, 1], 'kernel_grid': ['rbf', 'poly'], 'gamma_grid': [0.001, 0.01, 0.1, 1], 'degree_grid': [2, 4], 'k_folds': 5}\n",
-      "Tuned hyperparameters:  {'C': 1, 'degree': 2, 'gamma': 0.001, 'kernel': 'rbf'}\n"
+      "Hyperparameters searched:  {'c_values': [0.01, 0.1, 1, 10], 'kernel_grid': ['rbf', 'poly'], 'gamma_grid': [0.001, 0.01, 0.1, 1], 'degree_grid': [2, 4], 'class_weight': ['balanced', None], 'k_folds': 5}\n",
+      "Tuned hyperparameters:  {'C': 10, 'class_weight': 'balanced', 'degree': 2, 'gamma': 0.001, 'kernel': 'rbf'}\n"
      ]
     }
    ],
