--- a/Code/Classification/SVM/Fit_SVM_Classifier_Individual_Features_PCA.ipynb
+++ b/Code/Classification/SVM/Fit_SVM_Classifier_Individual_Features_PCA.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:00:10.278889Z",
-     "iopub.status.busy": "2024-04-14T17:00:10.278427Z",
-     "iopub.status.idle": "2024-04-14T17:00:12.356344Z",
-     "shell.execute_reply": "2024-04-14T17:00:12.355523Z"
+     "iopub.execute_input": "2024-04-14T19:35:56.759692Z",
+     "iopub.status.busy": "2024-04-14T19:35:56.759235Z",
+     "iopub.status.idle": "2024-04-14T19:35:58.905932Z",
+     "shell.execute_reply": "2024-04-14T19:35:58.905057Z"
     }
    },
    "outputs": [],
@@ -29,10 +29,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:00:12.361187Z",
-     "iopub.status.busy": "2024-04-14T17:00:12.360721Z",
-     "iopub.status.idle": "2024-04-14T17:00:12.364541Z",
-     "shell.execute_reply": "2024-04-14T17:00:12.363872Z"
+     "iopub.execute_input": "2024-04-14T19:35:58.910513Z",
+     "iopub.status.busy": "2024-04-14T19:35:58.910289Z",
+     "iopub.status.idle": "2024-04-14T19:35:58.913720Z",
+     "shell.execute_reply": "2024-04-14T19:35:58.913074Z"
     }
    },
    "outputs": [],
@@ -46,10 +46,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:00:12.368653Z",
-     "iopub.status.busy": "2024-04-14T17:00:12.368449Z",
-     "iopub.status.idle": "2024-04-14T17:00:12.372008Z",
-     "shell.execute_reply": "2024-04-14T17:00:12.371315Z"
+     "iopub.execute_input": "2024-04-14T19:35:58.917956Z",
+     "iopub.status.busy": "2024-04-14T19:35:58.917737Z",
+     "iopub.status.idle": "2024-04-14T19:35:58.921473Z",
+     "shell.execute_reply": "2024-04-14T19:35:58.920769Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:00:12.376615Z",
-     "iopub.status.busy": "2024-04-14T17:00:12.376356Z",
-     "iopub.status.idle": "2024-04-14T17:00:16.739591Z",
-     "shell.execute_reply": "2024-04-14T17:00:16.738492Z"
+     "iopub.execute_input": "2024-04-14T19:35:58.926035Z",
+     "iopub.status.busy": "2024-04-14T19:35:58.925739Z",
+     "iopub.status.idle": "2024-04-14T19:36:02.006137Z",
+     "shell.execute_reply": "2024-04-14T19:36:02.005305Z"
     }
    },
    "outputs": [
@@ -244,10 +244,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:00:16.803925Z",
-     "iopub.status.busy": "2024-04-14T17:00:16.803012Z",
-     "iopub.status.idle": "2024-04-14T17:00:16.904002Z",
-     "shell.execute_reply": "2024-04-14T17:00:16.903006Z"
+     "iopub.execute_input": "2024-04-14T19:36:02.054523Z",
+     "iopub.status.busy": "2024-04-14T19:36:02.053977Z",
+     "iopub.status.idle": "2024-04-14T19:36:02.132440Z",
+     "shell.execute_reply": "2024-04-14T19:36:02.131689Z"
     }
    },
    "outputs": [
@@ -3506,10 +3506,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:00:16.915076Z",
-     "iopub.status.busy": "2024-04-14T17:00:16.914389Z",
-     "iopub.status.idle": "2024-04-14T17:00:19.810060Z",
-     "shell.execute_reply": "2024-04-14T17:00:19.808564Z"
+     "iopub.execute_input": "2024-04-14T19:36:02.138060Z",
+     "iopub.status.busy": "2024-04-14T19:36:02.137897Z",
+     "iopub.status.idle": "2024-04-14T19:36:02.396686Z",
+     "shell.execute_reply": "2024-04-14T19:36:02.395380Z"
     }
    },
    "outputs": [],
@@ -3529,10 +3529,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T17:00:19.817688Z",
-     "iopub.status.busy": "2024-04-14T17:00:19.817080Z",
-     "iopub.status.idle": "2024-04-14T18:39:44.658784Z",
-     "shell.execute_reply": "2024-04-14T18:39:44.657654Z"
+     "iopub.execute_input": "2024-04-14T19:36:02.401132Z",
+     "iopub.status.busy": "2024-04-14T19:36:02.400936Z",
+     "iopub.status.idle": "2024-04-14T23:22:51.932050Z",
+     "shell.execute_reply": "2024-04-14T23:22:51.931271Z"
     }
    },
    "outputs": [
@@ -3540,24 +3540,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time in minutes:  96.81925565401713\n",
-      "Training time per image in minutes:  0.016128478369817945\n"
+      "Training time in minutes:  226.03151347637177\n",
+      "Training time per image in minutes:  0.037653092366545356\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy of best model:  0.999000499750125\n",
-      "Mean cross validated accuracy of best model:  0.7706115736885929\n"
+      "Train accuracy of best model:  1.0\n",
+      "Mean cross validated accuracy of best model:  0.8062611712461838\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hyperparameters searched:  {'c_values': [0.001, 0.01, 0.1, 1], 'kernel_grid': ['rbf', 'poly'], 'gamma_grid': [0.001, 0.01, 0.1, 1], 'degree_grid': [2, 4], 'k_folds': 5}\n",
-      "Tuned hyperparameters:  {'C': 1, 'degree': 2, 'gamma': 0.001, 'kernel': 'rbf'}\n"
+      "Hyperparameters searched:  {'c_values': [0.01, 0.1, 1, 10], 'kernel_grid': ['rbf', 'poly'], 'gamma_grid': [0.001, 0.01, 0.1, 1], 'degree_grid': [2, 4], 'class_weight': ['balanced', None], 'k_folds': 5}\n",
+      "Tuned hyperparameters:  {'C': 10, 'class_weight': 'balanced', 'degree': 2, 'gamma': 0.001, 'kernel': 'rbf'}\n"
      ]
     }
    ],
