new model perf table

--- a/Code/Classification/SVM/SVM_Predictions_All_Features_PCA.ipynb
+++ b/Code/Classification/SVM/SVM_Predictions_All_Features_PCA.ipynb
@@ -213,8 +213,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction time in minutes:  0.1287548581759135\n",
-      "Prediction time per image in minutes:  8.647069051438114e-05\n"
+      "Prediction time in minutes:  0.15244406859079998\n",
+      "Prediction time per image in minutes:  0.00010238016695151107\n"
      ]
     }
    ],
