svm results hopefully

--- a/Code/Classification/SVM/Fit_SVM_Classifier_Individual_Features_PCA.ipynb
+++ b/Code/Classification/SVM/Fit_SVM_Classifier_Individual_Features_PCA.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T19:35:56.759692Z",
-     "iopub.status.busy": "2024-04-14T19:35:56.759235Z",
-     "iopub.status.idle": "2024-04-14T19:35:58.905932Z",
-     "shell.execute_reply": "2024-04-14T19:35:58.905057Z"
+     "iopub.execute_input": "2024-04-15T00:53:56.950713Z",
+     "iopub.status.busy": "2024-04-15T00:53:56.950425Z",
+     "iopub.status.idle": "2024-04-15T00:53:58.119606Z",
+     "shell.execute_reply": "2024-04-15T00:53:58.119088Z"
     }
    },
    "outputs": [],
@@ -29,10 +29,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T19:35:58.910513Z",
-     "iopub.status.busy": "2024-04-14T19:35:58.910289Z",
-     "iopub.status.idle": "2024-04-14T19:35:58.913720Z",
-     "shell.execute_reply": "2024-04-14T19:35:58.913074Z"
+     "iopub.execute_input": "2024-04-15T00:53:58.121925Z",
+     "iopub.status.busy": "2024-04-15T00:53:58.121706Z",
+     "iopub.status.idle": "2024-04-15T00:53:58.123946Z",
+     "shell.execute_reply": "2024-04-15T00:53:58.123607Z"
     }
    },
    "outputs": [],
@@ -46,10 +46,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T19:35:58.917956Z",
-     "iopub.status.busy": "2024-04-14T19:35:58.917737Z",
-     "iopub.status.idle": "2024-04-14T19:35:58.921473Z",
-     "shell.execute_reply": "2024-04-14T19:35:58.920769Z"
+     "iopub.execute_input": "2024-04-15T00:53:58.125653Z",
+     "iopub.status.busy": "2024-04-15T00:53:58.125396Z",
+     "iopub.status.idle": "2024-04-15T00:53:58.127325Z",
+     "shell.execute_reply": "2024-04-15T00:53:58.126981Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T19:35:58.926035Z",
-     "iopub.status.busy": "2024-04-14T19:35:58.925739Z",
-     "iopub.status.idle": "2024-04-14T19:36:02.006137Z",
-     "shell.execute_reply": "2024-04-14T19:36:02.005305Z"
+     "iopub.execute_input": "2024-04-15T00:53:58.129021Z",
+     "iopub.status.busy": "2024-04-15T00:53:58.128802Z",
+     "iopub.status.idle": "2024-04-15T00:54:00.775233Z",
+     "shell.execute_reply": "2024-04-15T00:54:00.774545Z"
     }
    },
    "outputs": [
@@ -244,10 +244,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T19:36:02.054523Z",
-     "iopub.status.busy": "2024-04-14T19:36:02.053977Z",
-     "iopub.status.idle": "2024-04-14T19:36:02.132440Z",
-     "shell.execute_reply": "2024-04-14T19:36:02.131689Z"
+     "iopub.execute_input": "2024-04-15T00:54:00.816399Z",
+     "iopub.status.busy": "2024-04-15T00:54:00.816226Z",
+     "iopub.status.idle": "2024-04-15T00:54:00.863715Z",
+     "shell.execute_reply": "2024-04-15T00:54:00.863068Z"
     }
    },
    "outputs": [
@@ -3506,10 +3506,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T19:36:02.138060Z",
-     "iopub.status.busy": "2024-04-14T19:36:02.137897Z",
-     "iopub.status.idle": "2024-04-14T19:36:02.396686Z",
-     "shell.execute_reply": "2024-04-14T19:36:02.395380Z"
+     "iopub.execute_input": "2024-04-15T00:54:00.865871Z",
+     "iopub.status.busy": "2024-04-15T00:54:00.865729Z",
+     "iopub.status.idle": "2024-04-15T00:54:00.991302Z",
+     "shell.execute_reply": "2024-04-15T00:54:00.990428Z"
     }
    },
    "outputs": [],
@@ -3529,10 +3529,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T19:36:02.401132Z",
-     "iopub.status.busy": "2024-04-14T19:36:02.400936Z",
-     "iopub.status.idle": "2024-04-14T23:22:51.932050Z",
-     "shell.execute_reply": "2024-04-14T23:22:51.931271Z"
+     "iopub.execute_input": "2024-04-15T00:54:00.993359Z",
+     "iopub.status.busy": "2024-04-15T00:54:00.993200Z",
+     "iopub.status.idle": "2024-04-15T01:47:00.814699Z",
+     "shell.execute_reply": "2024-04-15T01:47:00.813896Z"
     }
    },
    "outputs": [
@@ -3540,24 +3540,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time in minutes:  226.03151347637177\n",
-      "Training time per image in minutes:  0.037653092366545356\n"
+      "Training time in minutes:  52.472494240601854\n",
+      "Training time per image in minutes:  0.008741045184174888\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy of best model:  1.0\n",
-      "Mean cross validated accuracy of best model:  0.8062611712461838\n"
+      "Train accuracy of best model:  0.9631850741296019\n",
+      "Mean cross validated accuracy of best model:  0.904880932556203\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hyperparameters searched:  {'c_values': [0.01, 0.1, 1, 10], 'kernel_grid': ['rbf', 'poly'], 'gamma_grid': [0.001, 0.01, 0.1, 1], 'degree_grid': [2, 4], 'class_weight': ['balanced', None], 'k_folds': 5}\n",
-      "Tuned hyperparameters:  {'C': 10, 'class_weight': 'balanced', 'degree': 2, 'gamma': 0.001, 'kernel': 'rbf'}\n"
+      "Hyperparameters searched:  {'c_values': [0.01, 0.31622776601683794, 10.0], 'kernel_grid': ['rbf'], 'gamma_grid': [1e-05, 0.00025118864315095795, 0.00630957344480193, 0.1584893192461111, 3.981071705534969, 100.0, 'scale'], 'class_weight': ['balanced', None], 'k_folds': 5}\n",
+      "Tuned hyperparameters:  {'C': 10.0, 'class_weight': 'balanced', 'gamma': 1e-05, 'kernel': 'rbf'}\n"
      ]
     }
    ],
