--- a/Code/Classification/SVM/Fit_SVM_Classifier_All_Features_PCA.ipynb
+++ b/Code/Classification/SVM/Fit_SVM_Classifier_All_Features_PCA.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T19:35:46.293718Z",
-     "iopub.status.busy": "2024-04-14T19:35:46.292520Z",
-     "iopub.status.idle": "2024-04-14T19:35:47.696271Z",
-     "shell.execute_reply": "2024-04-14T19:35:47.695477Z"
+     "iopub.execute_input": "2024-04-15T00:54:04.071991Z",
+     "iopub.status.busy": "2024-04-15T00:54:04.071757Z",
+     "iopub.status.idle": "2024-04-15T00:54:05.332362Z",
+     "shell.execute_reply": "2024-04-15T00:54:05.331799Z"
     }
    },
    "outputs": [],
@@ -29,10 +29,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T19:35:47.701008Z",
-     "iopub.status.busy": "2024-04-14T19:35:47.700743Z",
-     "iopub.status.idle": "2024-04-14T19:35:47.704607Z",
-     "shell.execute_reply": "2024-04-14T19:35:47.703907Z"
+     "iopub.execute_input": "2024-04-15T00:54:05.334924Z",
+     "iopub.status.busy": "2024-04-15T00:54:05.334690Z",
+     "iopub.status.idle": "2024-04-15T00:54:05.337226Z",
+     "shell.execute_reply": "2024-04-15T00:54:05.336873Z"
     }
    },
    "outputs": [],
@@ -46,10 +46,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T19:35:47.708664Z",
-     "iopub.status.busy": "2024-04-14T19:35:47.708491Z",
-     "iopub.status.idle": "2024-04-14T19:35:47.711864Z",
-     "shell.execute_reply": "2024-04-14T19:35:47.711248Z"
+     "iopub.execute_input": "2024-04-15T00:54:05.338921Z",
+     "iopub.status.busy": "2024-04-15T00:54:05.338776Z",
+     "iopub.status.idle": "2024-04-15T00:54:05.340874Z",
+     "shell.execute_reply": "2024-04-15T00:54:05.340525Z"
     }
    },
    "outputs": [],
@@ -70,10 +70,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T19:35:47.715501Z",
-     "iopub.status.busy": "2024-04-14T19:35:47.715336Z",
-     "iopub.status.idle": "2024-04-14T19:35:50.720957Z",
-     "shell.execute_reply": "2024-04-14T19:35:50.720100Z"
+     "iopub.execute_input": "2024-04-15T00:54:05.342639Z",
+     "iopub.status.busy": "2024-04-15T00:54:05.342435Z",
+     "iopub.status.idle": "2024-04-15T00:54:07.600781Z",
+     "shell.execute_reply": "2024-04-15T00:54:07.599939Z"
     }
    },
    "outputs": [
@@ -212,10 +212,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T19:35:50.770295Z",
-     "iopub.status.busy": "2024-04-14T19:35:50.769737Z",
-     "iopub.status.idle": "2024-04-14T19:35:50.939749Z",
-     "shell.execute_reply": "2024-04-14T19:35:50.938951Z"
+     "iopub.execute_input": "2024-04-15T00:54:07.636910Z",
+     "iopub.status.busy": "2024-04-15T00:54:07.636722Z",
+     "iopub.status.idle": "2024-04-15T00:54:07.740383Z",
+     "shell.execute_reply": "2024-04-15T00:54:07.739518Z"
     }
    },
    "outputs": [],
@@ -235,10 +235,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-14T19:35:50.944151Z",
-     "iopub.status.busy": "2024-04-14T19:35:50.943969Z",
-     "iopub.status.idle": "2024-04-14T22:18:00.407413Z",
-     "shell.execute_reply": "2024-04-14T22:18:00.406583Z"
+     "iopub.execute_input": "2024-04-15T00:54:07.742936Z",
+     "iopub.status.busy": "2024-04-15T00:54:07.742761Z",
+     "iopub.status.idle": "2024-04-15T01:44:15.099570Z",
+     "shell.execute_reply": "2024-04-15T01:44:15.098737Z"
     }
    },
    "outputs": [
@@ -246,24 +246,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time in minutes:  161.5198720018069\n",
-      "Training time per image in minutes:  0.026906525404265684\n"
+      "Training time in minutes:  49.629099599520366\n",
+      "Training time per image in minutes:  0.008267382908465829\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train accuracy of best model:  1.0\n",
-      "Mean cross validated accuracy of best model:  0.815259089647516\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hyperparameters searched:  {'c_values': [0.01, 0.1, 1, 10], 'kernel_grid': ['rbf', 'poly'], 'gamma_grid': [0.001, 0.01, 0.1, 1], 'degree_grid': [2, 4], 'class_weight': ['balanced', None], 'k_folds': 5}\n",
-      "Tuned hyperparameters:  {'C': 10, 'class_weight': 'balanced', 'degree': 2, 'gamma': 0.001, 'kernel': 'rbf'}\n"
+      "Train accuracy of best model:  0.9643511577544561\n",
+      "Mean cross validated accuracy of best model:  0.8827245351096309\n",
+      "Hyperparameters searched:  {'c_values': [0.01, 0.31622776601683794, 10.0], 'kernel_grid': ['rbf'], 'gamma_grid': [1e-05, 0.00025118864315095795, 0.00630957344480193, 0.1584893192461111, 3.981071705534969, 100.0, 'scale'], 'class_weight': ['balanced', None], 'k_folds': 5}\n",
+      "Tuned hyperparameters:  {'C': 10.0, 'class_weight': 'balanced', 'gamma': 1e-05, 'kernel': 'rbf'}\n"
      ]
     }
    ],
